src/components/tradeui/WalletContentsBox.css
:root {
  --itemWidth: 64px;
}
.itemBox {
  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAICAYAAADaxo44AAAAGklEQVQImWP49OnTfxhGBgxUlEDmICuiogQASpu7mfYC9wcAAAAASUVORK5CYII=")
    repeat;
  background-size: 16px;
  box-shadow: inset -1px -1px 0px #ffffff, inset 1px 1px 0px 0px #808088,
    inset -2px -2px 0px #bbc3c4, inset 2px 2px 0px 0px #0c0c0c;

  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(var(--itemWidth), 1fr));
  grid-auto-rows: fit-content(1em);
  padding: calc(var(--itemWidth) / 4);

  overflow-y: auto;
  flex: 1;
}

.itemBox .icon.ExplorerIcon {
  width: 100%;
  max-width: initial;
}

.icon.ExplorerIcon:focus .icon__icon,
.icon.ExplorerIcon:active .icon__icon,
.icon.ExplorerIcon:active:focus .icon__icon,
.icon.ExplorerIcon.is-active .icon__icon {
  filter: sepia(100%) saturate(374%) brightness(70%) hue-rotate(180deg)
    saturate(80%) !important;
}

.icon.ExplorerIcon:focus .icon__text,
.icon.ExplorerIcon:active .icon__text,
.icon.ExplorerIcon:active:focus .icon__text,
.icon.ExplorerIcon.is-active .icon__text {
  word-wrap: break-word;
}

.Frame.Window.tokenFolder {
  position: absolute;
  z-index: 1;
  right: 16px;
  left: 16px;
  top: 128px;
  max-height: calc(100vh - 256px);
  height: 100%;
  display: flex;
  flex-direction: column;
}

.itemBoxContainer {
  height: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
}

